--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "escape-string",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "dist/escapeString.js",
-  "typings": "dist/escapeString.d.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "./node_modules/.bin/tsc",
+    "build": "rm -rf dist && node_modules/.bin/tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,8 +18,7 @@
     "url": "https://github.com/Riim/escape-string/issues"
   },
   "homepage": "https://github.com/Riim/escape-string#readme",
-  "devDependencies": {},
-  "dependencies": {
-    "typescript": "^2.1.4"
+  "devDependencies": {
+    "typescript": "^2.5.2"
   }
 }
